# personal-finance-dashboard

./: .gitignore  README.md  main.py  pyproject.toml
app/: app.py
app/modules/: config.py  database.py  spending_tracker.py
