[tool.poetry]
name = "personal-finance-dashboard"
description = "A Dash application for tracking spending and managing personal finances"
authors = ["YangWu1227 <yangwu2020@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4"
dash = ">=2.14.2"
pandas = ">=2.1.4"
dash-bootstrap-components = ">=1.5.0"
plotly = ">=5.18.0"
nbformat = ">=4.2.0"
gunicorn = ">=22.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
