[project]
name = "personal-finance-dashboard"
version = "0.1.0"
description = "A Dash application for tracking spending and managing personal finances"
authors = ["YangWu1227 <yangwu2020@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.6.0",
    "gevent>=24.11.1",
    "gunicorn>=23.0.0",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
]

[tool.uv]
package = false

[dependency-groups]
notebook = [
    "ipykernel>=6.29.5",
]
lint-fmt = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = 3.12
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "plotly.*",
    "dash.*",
    "dash_bootstrap_components.*",
    "gunicorn.app.base.*",
]
ignore_missing_imports = true
